syntax = "proto3";


option java_package = "org.example";

service  NotifyService {
  rpc NotifyRegistration(registrationMessage) returns (APIResponse);
  rpc NotifyBooking(bookingMessage) returns(APIResponse);
  rpc NotifyBookingCancellation(bookingcancellation) returns (APIResponse);
  rpc generateOtp(email) returns (otpResponse);
  rpc NotifyUserAction(userAction) returns (APIResponse);
}

message registrationMessage{
  string  RecipientsMailId = 1;
  string  Username = 2;
  string Mobilenumber = 3;


}

message bookingMessage {
  string username = 1;
  string userEmailId =2;
  string Description=3;
  string CheckInDate = 4;
  string CheckOutDate =5;
  string StratTime =6;
  string EndTime = 7;

}

message bookingcancellation {
  string Username = 1;
  string UserEmailId = 2;
  string BookingId = 3;

}


message APIResponse {
  string responseCode=1;
  string responseMessage=2;
}

message email {
  string userEmail=1;
  string username = 2;
}

message otpResponse {
  string otp=1;
  string generatedTimeStamp=2;
}
message userAction {
  int32 actionType=1;
  string username=2;
  string userEmail=3;
}